# deap

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  config-deap.hpp.in  main.cpp
src/core/: FilePath.cpp  FilePath.hpp
src/database/: Database.cpp  Database.hpp
src/database/entities/: Admin.hpp  Delegate.hpp  Student.hpp
src/database/entity/: User.hpp
src/gui/: LoginWidget.cpp  LoginWidget.hpp  LoginWidget.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
